# ECell_Engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  _a_s_t_node__parser_8hpp_source.html  _binary_operated_vector_8hpp_source.html  _biochemical_module_8hpp_source.html  _biochemical_solver_8hpp_source.html  _bitwise_operations_utility_8hpp_source.html  _callback_8hpp_source.html  _command_8hpp_source.html  _command_with_receiver_8hpp_source.html  _commands_8hpp_source.html  _commands_manager_8hpp_source.html  _constant_8hpp_source.html  _data_state_8hpp_source.html  _dependencies_database_8hpp_source.html  _engine_8hpp_source.html  _equation_8hpp_source.html  _event_8hpp_source.html  _explicit_r_k_coefficients_8hpp_source.html  _file_i_o_manager_8hpp_source.html  _function_8hpp_source.html  _generalized_explicit_r_k_8hpp_source.html  _gillespie___n_r_m___r_8hpp_source.html  _gillespie___n_r_m___r___data_8hpp_source.html  _gillespie_n_r_m_r_solver_8hpp_source.html  _indexed_min_heap_8hpp_source.html  _logger_8hpp_source.html  _logger_sink_8hpp_source.html  _logic_8hpp_source.html  _logic_operation_8hpp_source.html  _main_8hpp_source.html  _math_utility_8hpp_source.html  _modify_data_state_value_event_8hpp_source.html  _module_8hpp_source.html  _module_importer_8hpp_source.html  _module_importer_manager_8hpp_source.html  _operand_8hpp_source.html  (+306 more)
Docs/: Doxyfile
ECell_Engine/: CMakeLists.txt  ECell_Engine.cpp  Main.cpp  launcher.cpp
ECell_Engine/Editor/: Editor.cpp  Editor.hpp  EditorUtility.hpp  Windows.cpp  Windows.hpp
ECell_Engine/engine_system_files/: system_time.hpp
ECell_Engine/headers/: ASTNode_parser.hpp  BinaryOperatedVector.hpp  BiochemicalModule.hpp  BiochemicalSolver.hpp  Command.hpp  CommandWithReceiver.hpp  Commands.hpp  CommandsManager.hpp  ComputedParameter.hpp  Constant.hpp  DataState.hpp  ECell_Engine.hpp  Engine.hpp  EngineLog.hpp  FileIOManager.hpp  Function.hpp  GillespieNRMRSolver.hpp  Gillespie_NRM.hpp  Gillespie_NRM_Data.hpp  Gillespie_NRM_R.hpp  Gillespie_NRM_R_Data.hpp  IndexedMinHeap.hpp  Logger.hpp  Main.hpp  Module.hpp  ModuleImporter.hpp  ModuleImporterManager.hpp  Operand.hpp  Operation.hpp  Parameter.hpp  Reaction.hpp  ReversibleRNG.hpp  SBMLModule.hpp  SBMLModuleImporter.hpp  SBMLParser.hpp  SBML_parsing.hpp  SBML_writing.hpp  SbmlParser.hpp  SbmlWriter.hpp  SimpleParameter.hpp  (+18 more)
ECell_Engine/headers/Core/: Callback.hpp  Engine.hpp  IDProvider.hpp  Simulation.hpp  SimulationsManager.hpp  Timer.hpp  Track.hpp  Trigger.hpp  Watcher.hpp
ECell_Engine/headers/Data/: BinaryOperatedVector.hpp  BiochemicalModule.hpp  BitwiseOperationsUtility.hpp  ComputedParameter.hpp  Constant.hpp  DataState.hpp  DependenciesDatabase.hpp  IndexedMinHeap.hpp  Module.hpp  Parameter.hpp  Reaction.hpp  SBMLModule.hpp  SimpleParameter.hpp  Species.hpp
ECell_Engine/headers/IO/: Command.hpp  CommandArgs.hpp  CommandWithReceiver.hpp  Commands.hpp  CommandsManager.hpp  ModuleImporterManager.hpp  SBMLModuleImporter.hpp  SbmlWriter.hpp
ECell_Engine/headers/Logging/: LogLevels.hpp  Logger.hpp  LoggerSink.hpp
ECell_Engine/headers/Maths/: Equation.hpp  Function.hpp  Logic.hpp  LogicOperation.hpp  MathUtility.hpp  Operand.hpp  Operation.hpp  ReversibleRNG.hpp  revrand.h
ECell_Engine/headers/Solver/: BiochemicalSolver.hpp  GillespieNRMRSolver.hpp  ODESolver.hpp  Solver.hpp  Stepper.hpp
ECell_Engine/headers/Util/: BinarySearch.hpp  BitwiseOperationsUtility.hpp  StrUtil.hpp
ECell_Engine/headers/dependencies/: DependenciesDatabase.hpp
ECell_Engine/src/: ASTNode_parser.cpp  BiochemicalSolver.cpp  Commands.cpp  CommandsManager.cpp  ComputedParameter.cpp  Constant.cpp  DataState.cpp  ECell_Engine.cpp  Engine.cpp  EngineLog.cpp  FileIOManager.cpp  Function.cpp  GillespieNRMRSolver.cpp  Gillespie_NRM.cpp  Gillespie_NRM_Data.cpp  Gillespie_NRM_R.cpp  Gillespie_NRM_R_Data.cpp  IndexedMinHeap.cpp  Logger.cpp  MathUtility.cpp  ModuleImporterManager.cpp  Operand.cpp  Operation.cpp  Parameter.cpp  Reaction.cpp  SBMLModule.cpp  SBMLModuleImporter.cpp  SBMLParser.cpp  SBML_parsing.cpp  SBML_writing.cpp  SbmlParser.cpp  SbmlWriter.cpp  SimpleParameter.cpp  Simulation.cpp  SimulationLoop.cpp  SimulationsManager.cpp  Species.cpp  Timer.cpp  commands.cpp  commands_center.cpp  (+8 more)
ECell_Engine/src/Core/: Engine.cpp  Simulation.cpp  SimulationsManager.cpp  Timer.cpp  Track.cpp  Watcher.cpp
ECell_Engine/src/Data/: BiochemicalModule.cpp  ComputedParameter.cpp  Constant.cpp  DataState.cpp  DependenciesDatabase.cpp  IndexedMinHeap.cpp  Parameter.cpp  SimpleParameter.cpp  Species.cpp
ECell_Engine/src/IO/: Command.cpp  Commands.cpp  CommandsManager.cpp  ModuleImporterManager.cpp  SBMLModuleImporter.cpp  SbmlParser.cpp  SbmlWriter.cpp
ECell_Engine/src/Logging/: Logger.cpp
Editor/: CMakeLists.txt  CommandsManager.cpp  CommandsManager.hpp  Editor.cpp  Editor.hpp  Windows.cpp  Windows.hpp
Editor/headers/: BackendUtility.hpp  ConsoleWidget.hpp  Editor.hpp  EditorConsoleLoggerSink.hpp  EditorLog.hpp  EngineDataVisualizationWidget.hpp  ExeConsoleLoggerSink.hpp  FileIOWidget.hpp  LogWidget.hpp  Main.hpp  MainWindow.hpp  ModelExplorerWidget.hpp  ModelHierarchyWidget.hpp  ModelNodeBasedViewerContext.hpp  ModelNodeBasedViewerGlobal.hpp  ModelNodeBasedViewerWidget.hpp  ModelStateVisualizationWidget.hpp  NodeEditorData.hpp  NodeEditorDraw.hpp  NodeEditorStyle.hpp  NodeEditorUtility.hpp  OptionsWidget.hpp  PlotUtility.hpp  SimulationFlowControlWidget.hpp  SimulationWidget.hpp  Widget.hpp  WidgetsVisibility.hpp
Editor/src/: BackendUtility.cpp  ConsoleWidget.cpp  Editor.cpp  EditorConsoleLoggerSink.cpp  EditorLog.cpp  EngineDataVisualizationWidget.cpp  FileIOWidget.cpp  LogWidget.cpp  Main.cpp  MainWindow.cpp  ModelExplorerWidget.cpp  ModelHierarchyWidget.cpp  ModelNodeBasedViewerContext.cpp  ModelNodeBasedViewerGlobal.cpp  ModelNodeBasedViewerWidget.cpp  ModelStateVisualizationWidget.cpp  NodeEditorData.cpp  NodeEditorDraw.cpp  NodeEditorUtility.cpp  OptionsWidget.cpp  SimulationFlowControlWidget.cpp  SimulationWidget.cpp  WidgetsVisibility.cpp  imgui_impl_glfw.cpp
(+179 files in other folders)
